@@ -2,7 +2,7 @@
 %          tex tex4ht-fonts-noncjk
 % or    ht tex tex4ht-fonts-noncjk   
 %
-% Copyright 2009-2014 TeX Users Group
+% Copyright 2009-2015 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -5978,15 +5978,276 @@ htfcss: ecxc font-weight: bold;
 
 \AddFont{ecxc}{alias/ec/ecxc}
 
-
-
-
-\<eccc-uni\><<<
-.ec-iwonacap
+\<eccc\><<<
+.eccc-uni
+htfcss: eccc1000 font-variant: small-caps;
 >>>
 
-\AddFont{eccc-uni}{alias/ec/eccc}
+\AddFont{eccc}{alias/ec/eccc}
 
+\<eccc-uni\><<<
+eccc-uni 0 255
+'&#x0060;'	'4'	grave
+'&#x00B4;'	'4'	acute
+'&#x02C6;'	'4'	circumflex
+'&#x02DC;'	'4'	tilde
+'&#x00A8;'	'4'	dieresis
+'&#x02DD;'	'4'	hungarumlaut
+'&#x02DA;'	'4'	ring
+'&#x02C7;'	'4'	caron
+'&#x02D8;'	'4'	breve
+'&#x00AF;'	'4'	macron
+'&#x02D9;'	'4'	dotaccent
+'&#x00B8;'	'4'	cedilla
+'&#x02DB;'	'4'	ogonek
+'&#x201A;'	'4'	quotesinglbase
+'&#x2039;'	'4'	guilsinglleft
+'&#x203A;'	'4'	guilsinglright
+'&#x201C;'	'4'	quotedblleft
+'&#x201D;'	'4'	quotedblright
+'&#x201E;'	'4'	quotedblbase
+'&#x00AB;'	'4'	guillemotleft
+'&#x00BB;'	'4'	guillemotright
+'&#x2013;'	'4'	endash
+'&#x2014;'	'4'	emdash
+'&#x200C;'	'4'	afii61664
+'&#x2080;'	'4'	perthousandzero
+'&#x0131;'	'4'	dotlessi
+'&#x0237;'	'4'	dotlessj
+'&#xFB00;'	'4'	ff
+'&#xFB01;'	'4'	fi
+'&#xFB02;'	'4'	fl
+'&#xFB03;'	'4'	ffi
+'&#xFB04;'	'4'	ffl
+'&#x2423;'	'4'	uni2423
+'&#x0021;'	'4'	exclam
+'&#x0022;'	'4'	quotedbl
+'&#x0023;'	'4'	numbersign
+'&#x0024;'	'4'	dollar
+'&#x0025;'	'4'	percent
+'&#x0026;'	'4'	ampersand
+'&#x2019;'	'4'	quoteright
+'&#x0028;'	'4'	parenleft
+'&#x0029;'	'4'	parenright
+'&#x002A;'	'4'	asterisk
+'&#x002B;'	'4'	plus
+'&#x002C;'	'4'	comma
+'&#x002D;'	'4'	hyphen
+'&#x002E;'	'4'	period
+'&#x002F;'	'4'	slash
+'&#x0030;'	'4'	zero
+'&#x0031;'	'4'	one
+'&#x0032;'	'4'	two
+'&#x0033;'	'4'	three
+'&#x0034;'	'4'	four
+'&#x0035;'	'4'	five
+'&#x0036;'	'4'	six
+'&#x0037;'	'4'	seven
+'&#x0038;'	'4'	eight
+'&#x0039;'	'4'	nine
+'&#x003A;'	'4'	colon
+'&#x003B;'	'4'	semicolon
+'&#x003C;'	'4'	less
+'&#x003D;'	'4'	equal
+'&#x003E;'	'4'	greater
+'&#x003F;'	'4'	question
+'&#x0040;'	'4'	at
+'&#x0041;'	'4'	A
+'&#x0042;'	'4'	B
+'&#x0043;'	'4'	C
+'&#x0044;'	'4'	D
+'&#x0045;'	'4'	E
+'&#x0046;'	'4'	F
+'&#x0047;'	'4'	G
+'&#x0048;'	'4'	H
+'&#x0049;'	'4'	I
+'&#x004A;'	'4'	J
+'&#x004B;'	'4'	K
+'&#x004C;'	'4'	L
+'&#x004D;'	'4'	M
+'&#x004E;'	'4'	N
+'&#x004F;'	'4'	O
+'&#x0050;'	'4'	P
+'&#x0051;'	'4'	Q
+'&#x0052;'	'4'	R
+'&#x0053;'	'4'	S
+'&#x0054;'	'4'	T
+'&#x0055;'	'4'	U
+'&#x0056;'	'4'	V
+'&#x0057;'	'4'	W
+'&#x0058;'	'4'	X
+'&#x0059;'	'4'	Y
+'&#x005A;'	'4'	Z
+'&#x005B;'	'4'	bracketleft
+'&#x005C;'	'4'	backslash
+'&#x005D;'	'4'	bracketright
+'&#x005E;'	'4'	asciicircum
+'&#x005F;'	'4'	underscore
+'&#x2018;'	'4'	quoteleft
+'&#x0061;'	'4'	a
+'&#x0062;'	'4'	b
+'&#x0063;'	'4'	c
+'&#x0064;'	'4'	d
+'&#x0065;'	'4'	e
+'&#x0066;'	'4'	f
+'&#x0067;'	'4'	g
+'&#x0068;'	'4'	h
+'&#x0069;'	'4'	i
+'&#x006A;'	'4'	j
+'&#x006B;'	'4'	k
+'&#x006C;'	'4'	l
+'&#x006D;'	'4'	m
+'&#x006E;'	'4'	n
+'&#x006F;'	'4'	o
+'&#x0070;'	'4'	p
+'&#x0071;'	'4'	q
+'&#x0072;'	'4'	r
+'&#x0073;'	'4'	s
+'&#x0074;'	'4'	t
+'&#x0075;'	'4'	u
+'&#x0076;'	'4'	v
+'&#x0077;'	'4'	w
+'&#x0078;'	'4'	x
+'&#x0079;'	'4'	y
+'&#x007A;'	'4'	z
+'&#x007B;'	'4'	braceleft
+'&#x007C;'	'4'	bar
+'&#x007D;'	'4'	braceright
+'&#x007E;'	'4'	asciitilde
+'&#x2010;'	'4'	hyphen.alt
+'&#x0102;'	'4'	Abreve
+'&#x0104;'	'4'	Aogonek
+'&#x0106;'	'4'	Cacute
+'&#x010C;'	'4'	Ccaron
+'&#x010E;'	'4'	Dcaron
+'&#x011A;'	'4'	Ecaron
+'&#x0118;'	'4'	Eogonek
+'&#x011E;'	'4'	Gbreve
+'&#x0139;'	'4'	Lacute
+'&#x013D;'	'4'	Lcaron
+'&#x0141;'	'4'	Lslash
+'&#x0143;'	'4'	Nacute
+'&#x0147;'	'4'	Ncaron
+'&#x014A;'	'4'	Eng
+'&#x0150;'	'4'	Ohungarumlaut
+'&#x0154;'	'4'	Racute
+'&#x0158;'	'4'	Rcaron
+'&#x015A;'	'4'	Sacute
+'&#x0160;'	'4'	Scaron
+'&#x015E;'	'4'	Scedilla
+'&#x0164;'	'4'	Tcaron
+'&#x0162;'	'4'	Tcommaaccent
+'&#x0170;'	'4'	Uhungarumlaut
+'&#x016E;'	'4'	Uring
+'&#x0178;'	'4'	Ydieresis
+'&#x0179;'	'4'	Zacute
+'&#x017D;'	'4'	Zcaron
+'&#x017B;'	'4'	Zdotaccent
+'&#x0132;'	'4'	IJ
+'&#x0130;'	'4'	Idotaccent
+'&#x0111;'	'4'	dcroat
+'&#x00A7;'	'4'	section
+'&#x0103;'	'4'	abreve
+'&#x0105;'	'4'	aogonek
+'&#x0107;'	'4'	cacute
+'&#x010D;'	'4'	ccaron
+'&#x010F;'	'4'	dcaron
+'&#x011B;'	'4'	ecaron
+'&#x0119;'	'4'	eogonek
+'&#x011F;'	'4'	gbreve
+'&#x013A;'	'4'	lacute
+'&#x013E;'	'4'	lcaron
+'&#x0142;'	'4'	lslash
+'&#x0144;'	'4'	nacute
+'&#x0148;'	'4'	ncaron
+'&#x014B;'	'4'	eng
+'&#x0151;'	'4'	ohungarumlaut
+'&#x0155;'	'4'	racute
+'&#x0159;'	'4'	rcaron
+'&#x015B;'	'4'	sacute
+'&#x0161;'	'4'	scaron
+'&#x015F;'	'4'	scedilla
+'&#x0165;'	'4'	tcaron
+'&#x0163;'	'4'	tcommaaccent
+'&#x0171;'	'4'	uhungarumlaut
+'&#x016F;'	'4'	uring
+'&#x00FF;'	'4'	ydieresis
+'&#x017A;'	'4'	zacute
+'&#x017E;'	'4'	zcaron
+'&#x017C;'	'4'	zdotaccent
+'&#x0133;'	'4'	ij
+'&#x00A1;'	'4'	exclamdown
+'&#x00BF;'	'4'	questiondown
+'&#x00A3;'	'4'	sterling
+'&#x00C0;'	'4'	Agrave
+'&#x00C1;'	'4'	Aacute
+'&#x00C2;'	'4'	Acircumflex
+'&#x00C3;'	'4'	Atilde
+'&#x00C4;'	'4'	Adieresis
+'&#x00C5;'	'4'	Aring
+'&#x00C6;'	'4'	AE
+'&#x00C7;'	'4'	Ccedilla
+'&#x00C8;'	'4'	Egrave
+'&#x00C9;'	'4'	Eacute
+'&#x00CA;'	'4'	Ecircumflex
+'&#x00CB;'	'4'	Edieresis
+'&#x00CC;'	'4'	Igrave
+'&#x00CD;'	'4'	Iacute
+'&#x00CE;'	'4'	Icircumflex
+'&#x00CF;'	'4'	Idieresis
+'&#x00D0;'	'4'	Eth
+'&#x00D1;'	'4'	Ntilde
+'&#x00D2;'	'4'	Ograve
+'&#x00D3;'	'4'	Oacute
+'&#x00D4;'	'4'	Ocircumflex
+'&#x00D5;'	'4'	Otilde
+'&#x00D6;'	'4'	Odieresis
+'&#x0152;'	'4'	OE
+'&#x00D8;'	'4'	Oslash
+'&#x00D9;'	'4'	Ugrave
+'&#x00DA;'	'4'	Uacute
+'&#x00DB;'	'4'	Ucircumflex
+'&#x00DC;'	'4'	Udieresis
+'&#x00DD;'	'4'	Yacute
+'&#x00DE;'	'4'	Thorn
+'&#x0053;&#x0053;'	'4'	SS
+'&#x00E0;'	'4'	agrave
+'&#x00E1;'	'4'	aacute
+'&#x00E2;'	'4'	acircumflex
+'&#x00E3;'	'4'	atilde
+'&#x00E4;'	'4'	adieresis
+'&#x00E5;'	'4'	aring
+'&#x00E6;'	'4'	ae
+'&#x00E7;'	'4'	ccedilla
+'&#x00E8;'	'4'	egrave
+'&#x00E9;'	'4'	eacute
+'&#x00EA;'	'4'	ecircumflex
+'&#x00EB;'	'4'	edieresis
+'&#x00EC;'	'4'	igrave
+'&#x00ED;'	'4'	iacute
+'&#x00EE;'	'4'	icircumflex
+'&#x00EF;'	'4'	idieresis
+'&#x00F0;'	'4'	eth
+'&#x00F1;'	'4'	ntilde
+'&#x00F2;'	'4'	ograve
+'&#x00F3;'	'4'	oacute
+'&#x00F4;'	'4'	ocircumflex
+'&#x00F5;'	'4'	otilde
+'&#x00F6;'	'4'	odieresis
+'&#x0153;'	'4'	oe
+'&#x00F8;'	'4'	oslash
+'&#x00F9;'	'4'	ugrave
+'&#x00FA;'	'4'	uacute
+'&#x00FB;'	'4'	ucircumflex
+'&#x00FC;'	'4'	udieresis
+'&#x00FD;'	'4'	yacute
+'&#x00FE;'	'4'	thorn
+'&#x00DF;'	'4'	germandbls
+eccc-uni 0 255
+>>>
+
+
+\AddFont{eccc-uni}{unicode/ec/eccc-uni}
 
 %%%%%%%%%%%%%
 \Section{ae}
